[project]
name = "llm-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "chardet>=5.2.0",
    "datasets>=4.1.1",
    "faiss-cpu>=1.12.0",
    "ftfy>=6.3.1",
    "peft>=0.17.1",
    "pysubs2>=1.8.0",
    "pyyaml>=6.0.2",
    "regex>=2025.7.34",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.1",
    "tqdm>=4.67.1",
    "trackio>=0.4.1",
    "transformers>=4.56.2",
    "trl>=0.23.0",
]
